Fixed overflow

--- a/src/pages/gameboardPage/gameboardPage.scss
+++ b/src/pages/gameboardPage/gameboardPage.scss
@@ -60,13 +60,15 @@
 
             .Gameboard_TracklistComponentContainer {
                 width: 50px;
-                opacity: 0;
-                transition: all 0.2s ease-in-out;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                flex-grow: 1;
                 height: 100%;
-                margin: 20px 0;
-                align-items: center;
+                flex-basis: 0;
                 overflow-y: auto;
-                padding: 0 5px;
+                overflow-x: hidden;
+                opacity: 100%;
                 &.shown {
                     width: 280px;
                     display: flex;
@@ -136,13 +138,15 @@
 
             .Gameboard_PlayersComponentContainer {
                 width: 50px;
-                opacity: 0;
-                transition: all 0.2s ease-in-out;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                flex-grow: 1;
                 height: 100%;
-                margin: 20px 0;
-                align-items: center;
+                flex-basis: 0;
                 overflow-y: auto;
-                padding: 0 5px;
+                overflow-x: hidden;
+                opacity: 100%;
                 &.shown {
                     width: 280px;
                     display: flex;
